# Examination-WS25-26

./: Aufgabe1.ipynb  Aufgabe2.ipynb  GastFreigabeTest  README.md  auto_fetch.bat  main.py  pyproject.toml
Aufgabe 1/: Aufgabe1.html  listings_1_13.csv
Aufgabe 2/: Aufgabe2.html  Aufgabe2.ipynb
Aufgabe 3/: Aufgabe3.html  Aufgabe3.ipynb
Daten/: predictions.csv
Quarto/: assignment.qmd  assignment_eric.qmd  quarto_template.html  quarto_template.qmd  quarto_template.quarto_ipynb_1
